<resources>
    <string name="app_name">Smart Travel</string>
    <string name="trips">Trips</string>
    <string name="tracker">Tracker</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="info">Info</string>
    <string name="driver_details">Driver Details</string>
    <string name="driver_name">Driver Name</string>
    <string name="click_to_enter_number_of_seats">Click to enter number of seats</string>
    <string name="enter_the_number_of_seats_to_book_bellow">Enter the number of seats to book bellow</string>
    <string name="seats_remaining">Seats Remaining</string>
    <string name="cost_per_seat">Cost per Seat</string>-
    <string name="vehicle_details">Vehicle Details</string>
    <string name="ksh">Ksh :</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart Travel</string>
    <string name="nav_header_subtitle">smartTravel@travel.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="about_info">Smart travel is design to help one do their car booking from anywhere and enables you to track your travelling expense </string>


    <string name="welcome">Welcome</string>
    <string name="vehicle_booking">Vehicle Booking</string>
    <string name="share">share</string>
    <string name="send">send</string>
    <string name="load">Load</string>
    <string name="seats_booked_in_trip">Seats booked in trip :</string>
    <string name="title_activity_admin_home">AdminHomeActivity</string>
    <string name="route_management">Route Management</string>
    <string name="active_tracking">Active Tracking</string>
    <string name="booked_customers">Booked Customers</string>
    <string name="vehicle_registration">Vehicle Registration</string>
    <string name="driver_registration">Driver Registration</string>
    <string name="user_notification">all your notifications will be displayed here as soon as you view them for reference</string>
    <string name="select_route">Select Route</string>
    <string name="manage">Manage</string>
    <string name="route">route</string>
    <string name="booking_status">Booking Status</string>
    <string name="set_vehicle">Set Vehicle</string>
    <string name="set_cost">Set Cost : </string>
    <string name="set_route">Set Route : </string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="operation_route">Operation Route</string>
    <string name="owner_number">Owner Number</string>
    <string name="vehicle_picture">Vehicle Picture</string>
    <string name="number_of_seats">Number of Seats</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="owner_name">Owner Name</string>
    <string name="upload_details">Upload Details</string>
    <string name="driver_picture">Driver Picture</string>
    <string name="provide_vehicle_details">Provide Vehicle Details</string>
    <string name="provide_driver_details">Provide driver details</string>
    <string name="driver_phone">Driver Phone</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="click_here_to_login">click here to login</string>
    <string name="click_here_to_add_new_route">Click here to add new route</string>
    <string name="set_remaing_seats">Set Remaing Seats</string>
    <string name="add_route">Add Route</string>
    <string name="route_name">Route Name :</string>
    <string name="enter_route_details">Enter route details</string>
    <string name="title_activity_maps">Map</string>

    <string name="tracking_enabled_notif">Tracking is currently enabled. Tap to cancel.</string>
    <string name="test_email">admin@admin.com</string>
    <string name="test_password">admin2020</string>
    <string name="firebase_path">location</string>
    <string name="start_tracker">Start Tracker</string>
    <string name="pick_point">pick point</string>
    <string name="enter_phone_number">enter phone number</string>
    <string name="title_activity_admin_maps">Map</string>

    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_manage_account">ManageAccountActivity</string>

    <string name="change_password_text">You are about to change your password. Changing your password will require you to put
        your current password and anew password to effectively change it.</string>

    <string name="delete_account_text">Deleting your account deletes all your information from smart travel including your trips summary</string>
    <string name="change">CHANGE</string>
    <string name="cancel">CANCEL</string>
    <string name="vehicle_specification">Vehicle Specification</string>
    <string name="proceed">PROCEED</string>
    <string name="loading">Loading...</string>
    <string name="map_view">Map View</string>
    <string name="click_to_add_new_pick_point">Click to add new pick point</string>
    <string name="pick_name">Pick Name :</string>
    <string name="add_pick">ADD PICK POINT</string>
    <string name="enter_pick_point_details">Enter Pick point Details</string>

    <string name="customer">Customer</string>
    <string name="admin">Administrator</string>
    <string name="currently_no_customer_has_booked_this_vehicle_to_the_specified_route">Dear administrator it seems no customer has booked this vehicle
        to the specified route</string>
    <string name="no_trip">Dear customer we are sorry you have not made any trip with us between the specified days.
        Please keep travelling with us to enjoy our great services</string>
    <string name="_07">07.....</string>
    <string name="nav_rate">Rate</string>
    <string name="nav_share">Share</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_admin">Go Admin</string>
    <string name="nav_client">Go Customer</string>
    <string name="adap">Welcome to this convenient mobile application that is meant to solve our public transport issues. Hope you will enjoy. Thank you.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="assign_key">Assign Key</string>
    <string name="your_key">your key</string>
    <string name="access_key_required">Access Key Required</string>
    <string name="load_map">Load map</string>
    <string name="user_id_or_passport">user id or passport</string>
    <string name="book_now">Book Now</string>

</resources>
