<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/daction_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/nav_share"/>
    <item
        android:id="@+id/action_rate"
        android:icon="@drawable/ic_star"
        android:title="@string/nav_rate"/>
    <item
        android:id="@+id/action_customer"
        android:icon="@drawable/ic_next"
        android:title="@string/nav_client"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_account"
        android:orderInCategory="100"
        android:title="@string/nav_logout"/>
</menu>
