<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_vehicle">

    <fragment
        android:id="@+id/nav_vehicle"
        android:name="com.atandi.smarttravel.Activities.ui.home.HomeFragment"
        android:label="@string/vehicle_booking"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_trip"
        android:name="com.atandi.smarttravel.Activities.ui.gallery.GalleryFragment"
        android:label="@string/trips"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_tracker"
        android:name="com.atandi.smarttravel.Activities.ui.slideshow.SlideshowFragment"
        android:label="@string/tracker"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.atandi.smarttravel.Activities.ui.tools.ToolsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.atandi.smarttravel.Activities.ui.share.ShareFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.atandi.smarttravel.Activities.ui.send.SendFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_send" />
</navigation>