<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".EditFragments.KeyFragment">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:background="@drawable/layout_shadow"
      android:padding="5dp"
      android:layout_gravity="center"
      android:layout_margin="20dp"
      android:orientation="vertical">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/access_key_required"
          android:textSize="20sp"
          android:layout_gravity="center"
          android:gravity="center"
          android:textColor="@android:color/black"
          android:layout_margin="10dp"/>
      <EditText
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:hint="@string/your_key"
          android:gravity="center"
          android:layout_margin="10dp"
          android:textColor="@android:color/black"
          android:textStyle="normal"
          android:textSize="20sp"
          android:id="@+id/keyId"
          android:inputType="number|numberPassword"/>
      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:layout_margin="20dp"
          android:id="@+id/btn_keyMap"
          android:text="@string/load_map"
          android:textColor="@android:color/white"
          android:background="@color/colorButtons"/>

  </LinearLayout>

</LinearLayout>