<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="5dp"
    android:background="@color/colorAccentA"
    tools:context=".EditFragments.ChangePasswordFragment">

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/holo_orange_dark"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:text="@string/change_password_text" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:inputType="textPassword"
        android:hint="current password"
        android:id="@+id/currentPassword"
        android:background="@drawable/layout_shadow"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:inputType="textPassword"
        android:hint="new password"
        android:id="@+id/newPassword"
        android:background="@drawable/layout_shadow"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:inputType="textPassword"
        android:hint="confirm new password"
        android:id="@+id/confirmPassword"
        android:background="@drawable/layout_shadow"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:elevation="5dp"
            android:textSize="20sp"
            android:padding="3dp"
            android:id="@+id/btnChangePasswordCancel"
            android:layout_margin="20dp"
            android:text="@string/cancel"/>


        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:elevation="5dp"
            android:padding="3dp"
            android:id="@+id/btnChangePassword"
            android:layout_margin="20dp"
            android:text="@string/change"/>
    </LinearLayout>



</LinearLayout>