<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="#232323"
    tools:context=".Activities.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="3dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="3dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="24sp"
                android:textColor="@android:color/holo_orange_dark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_specification"
                android:textSize="30sp"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/vloginPlateId"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/layout_shadow"
                android:hint="KKK 123K"
                android:textSize="20sp" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/Btnlogin"
                android:textColor="@android:color/white"
                android:text="@string/proceed"
                android:background="@color/colorButtons"
                android:layout_margin="20dp"/>


        </LinearLayout>
    </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>